# velodyne_human_detetion

./: CMakeLists.txt  README.md
cfg/: ExtractClusters.cfg  Tutorials.cfg
launch/: static_background.launch
src/: extract_clusters.cpp  find_person.cpp  pcl_test.cpp  server.cpp  set_static_background.cpp
